--- a/Index.html
+++ b/Index.html
@@ -13,5 +13,8 @@
       <li>Navegue por todos nossos produtos em catálogo.</li>
       <li>Compre sem sair de casa.</li>
     </ul>
+	<footer>
+	<p>&copy; Copyright Móveis Ecológicos S. A.</p>
+	<footer>
   </body>
 </html>
