Inserindo texto criativo

--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,11 @@
   <body>
     <h1>Mirror Fashion.</h1>
     <h2>Bem-vindo à Mirror Fashion, sua loja de roupas e acessórios.</h2>
+	<!-- inicio do arquivo até tag h2-->
+	<p>Do lixo ao luxo, um resgate do descartado e uma transformação
+	em algo funcional. Reaproveitar é aproveitar. Coisas descartadas
+	são nossa carta na manga. Erodido, mas único.</p>
+	<!-- ul e restante do arquivo -->
     <ul>
       <li>Confira nossas promoções.</li>
       <li>Receba informações sobre nossos lançamentos por email.</li>
