--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Mirror Fashion.</h1>
-    <h2>Bem-vindo à Mirror Fashion, sua loja de roupas e acessórios.</h2>
+    <h2 id="mensagem" class="alert alert-info">Bem-vindo à Mirror Fashion, sua loja de roupas e acessórios.</h2>
     <ul>
       <li>Confira nossas promoções.</li>
       <li>Receba informações sobre nossos lançamentos por email.</li>
